# libsigrokdecode

./: .gitignore  CMakeLists.txt  config.h.in  decoder.c  error.c  exception.c  instance.c  libsigrokdecode-internal.h  libsigrokdecode.h  libsigrokdecode.pc.in  log.c  module_sigrokdecode.c  session.c  sigrokdecodeConfig.cmake.in  srd.c  type_decoder.c  version.c
decoders/parallel/: pd.py
decoders/pca9571/: pd.py
decoders/tca6408a/: pd.py
decoders/uart/: pd.py
include/libsigrokdecode/: libsigrokdecode.h  libsigrokdecode_version.h.in
tests/: core.c  decoder.c  inst.c  main.c  session.c
